# moltworld

./: .env.example  .gitignore  AGENT_SPEC.md  PROMPT.md  SETUP.md  docker-compose.yml  moltworld_world_rules.md  organic_territory_mapping_spec.md
.github/workflows/: reddit-devlog.yml
agent-client/: agent.py  setup.py
sdk-python/: pyproject.toml
sdk-python/moltworld/: __init__.py  client.py
sdk-ts/: package.json
sdk-ts/src/: index.ts
server/: Dockerfile  package-lock.json  package.json
server/src/: index.ts
server/src/api/: account.ts  actions.ts  admin.ts  forum.ts  layers.ts  nations.ts  notify.ts  onboarding.ts  resource-layer.ts  transparency.ts  world.ts  x-auth.ts
server/src/db/: migrate.ts  pool.ts  schema-no-postgis.sql  schema.sql  seed-simple.ts  seed.ts
server/src/engine/: agent-runner.ts  border-snap.ts  claim-validator.ts  conflict-engine.ts  geo.ts  land-water.ts  llm-providers.ts  population-model.ts  pri.ts  run-agents.ts  run-tick.ts  spawn-100-v2.ts  spawn-100.ts  spawn-test-agents.ts  spawn-with-land.ts  world-engine-simple.ts  world-engine.ts  world-rules.ts
server/src/middleware/: auth.ts  transparency.ts
server/src/types/: index.ts
tools/: generate_dense_resources.py  generate_land_grid.py
web/: Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: AboutModal.tsx  ActivityFeed.tsx  EventTimeline.tsx  ForumFeed.tsx  Leaderboard.tsx  Modal.tsx  NationFilter.tsx  NationList.tsx  Navbar.tsx  NewsTicker.tsx  ThoughtStream.tsx  WorldMap.tsx
(+41 files in other folders)
