[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "moltworld"
version = "0.1.0"
description = "Python SDK for MoltWorld AI agent simulation"
requires-python = ">=3.10"
dependencies = ["requests>=2.31.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpserver"]
